--- a/ShowcaseERS/en.lproj/MainStoryboard.storyboard
+++ b/ShowcaseERS/en.lproj/MainStoryboard.storyboard
@@ -135,6 +135,90 @@ Environmental program </string>
             </objects>
             <point key="canvasLocation" x="1026" y="-123"/>
         </scene>
+        <!--My Mitigation View Controller - Mitigation-->
+        <scene sceneID="q0u-Aj-ckg">
+            <objects>
+                <collectionViewController autoresizesArchivedViewToFullSize="NO" title="Mitigation" id="8c5-Eb-VuN" customClass="MyMitigationViewController" sceneMemberID="viewController">
+                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="OPd-Ae-DfJ">
+                        <rect key="frame" x="0.0" y="64" width="768" height="911"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="LBt-6O-2dH">
+                            <size key="itemSize" width="197" height="186"/>
+                            <size key="headerReferenceSize" width="50" height="50"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MyCell" id="3Jt-ZS-b7e" customClass="MyCollectionViewCell">
+                                <rect key="frame" x="0.0" y="50" width="197" height="186"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="197" height="186"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="191" translatesAutoresizingMaskIntoConstraints="NO" id="jq5-uS-TRb">
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="41" id="fdQ-nI-H8B"/>
+                                                <constraint firstAttribute="width" constant="191" id="uCd-NK-RvO"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8g6-0K-vQ5">
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="140" id="TEx-VT-o6N"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="8g6-0K-vQ5" firstAttribute="bottom" secondItem="3Jt-ZS-b7e" secondAttribute="bottom" type="default" id="Iit-9x-hFL"/>
+                                    <constraint firstItem="8g6-0K-vQ5" firstAttribute="leading" secondItem="jq5-uS-TRb" secondAttribute="leading" type="default" id="KTJ-EI-p8W"/>
+                                    <constraint firstItem="jq5-uS-TRb" firstAttribute="trailing" secondItem="3Jt-ZS-b7e" secondAttribute="trailing" type="default" id="QUM-kP-lCT"/>
+                                    <constraint firstItem="jq5-uS-TRb" firstAttribute="top" secondItem="3Jt-ZS-b7e" secondAttribute="top" constant="5" id="jt1-fI-dUK"/>
+                                    <constraint firstItem="8g6-0K-vQ5" firstAttribute="trailing" secondItem="3Jt-ZS-b7e" secondAttribute="trailing" type="default" id="wQQ-kB-56H"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="descriptionLabel" destination="jq5-uS-TRb" id="oY0-qA-7j0"/>
+                                    <outlet property="imageView" destination="8g6-0K-vQ5" id="5Y3-Dx-zi8"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MyHeader" id="9Ny-2L-IC9" customClass="CustomHeaderView">
+                            <rect key="frame" x="0.0" y="0.0" width="768" height="50"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                            <subviews>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="  How can land managers remove carbon dioxide from the environment? " lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="768" translatesAutoresizingMaskIntoConstraints="NO" id="kEa-Co-eOK">
+                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="kEa-Co-eOK" firstAttribute="trailing" secondItem="9Ny-2L-IC9" secondAttribute="trailing" type="default" id="CHP-lr-Qt9"/>
+                                <constraint firstItem="kEa-Co-eOK" firstAttribute="top" secondItem="9Ny-2L-IC9" secondAttribute="top" type="default" id="CLY-5x-Zb5"/>
+                                <constraint firstItem="kEa-Co-eOK" firstAttribute="bottom" secondItem="9Ny-2L-IC9" secondAttribute="bottom" type="default" id="EgR-bS-Mqd"/>
+                                <constraint firstItem="kEa-Co-eOK" firstAttribute="leading" secondItem="9Ny-2L-IC9" secondAttribute="leading" type="default" id="O1d-dT-2ee"/>
+                            </constraints>
+                            <connections>
+                                <outlet property="sectionLabel" destination="kEa-Co-eOK" id="Wni-I5-beB"/>
+                            </connections>
+                        </collectionReusableView>
+                        <connections>
+                            <outlet property="dataSource" destination="8c5-Eb-VuN" id="qv0-U8-3DT"/>
+                            <outlet property="delegate" destination="8c5-Eb-VuN" id="f9J-5B-y1o"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="USDA-ERS Mitigation" id="cGB-4b-Nxh"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nvz-IT-zLu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1967" y="-104"/>
+        </scene>
         <!--Navigation Controller - Home-->
         <scene sceneID="ab4-Wr-Wv9">
             <objects>
@@ -167,6 +251,7 @@ Environmental program </string>
                     <connections>
                         <segue destination="OdD-5W-u4v" kind="relationship" relationship="viewControllers" id="6bV-hT-mbn"/>
                         <segue destination="qTG-Rc-8ZZ" kind="relationship" relationship="viewControllers" id="vGI-tI-GLa"/>
+                        <segue destination="u0b-zv-BtD" kind="relationship" relationship="viewControllers" id="OcP-sC-C7J"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t6o-pN-daY" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -192,10 +277,71 @@ Environmental program </string>
             </objects>
             <point key="canvasLocation" x="1031" y="-1240"/>
         </scene>
+        <!--Navigation Controller - Mitigation-->
+        <scene sceneID="L8d-1m-w3l">
+            <objects>
+                <navigationController id="u0b-zv-BtD" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Mitigation" id="O9R-DF-P3J"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bx9-uP-oqY">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8c5-Eb-VuN" kind="relationship" relationship="rootViewController" id="jno-dX-HEz"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bo6-Af-rNH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1967" y="-1248"/>
+        </scene>
     </scenes>
     <resources>
         <image name="naturalresources.jpg" width="727" height="101"/>
     </resources>
+    <classes>
+        <class className="CustomHeaderView" superclassName="UICollectionReusableView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CustomHeaderView.h"/>
+            <relationships>
+                <relationship kind="outlet" name="sectionLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="EffectsViewController" superclassName="UICollectionViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EffectsViewController.h"/>
+        </class>
+        <class className="MyCollectionViewCell" superclassName="UICollectionViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MyCollectionViewCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="descriptionLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="MyMitigationViewController" superclassName="UICollectionViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MyMitigationViewController.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="OverviewViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/OverviewViewController.h"/>
+        </class>
+        <class className="UICollectionReusableView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
+        </class>
+        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
+        </class>
+        <class className="UICollectionViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewController.h"/>
+        </class>
+        <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
+        </class>
+        <class className="UICollectionViewLayout" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
